add recommendation page for users, enhance javadocs